operators/subscription/external-secrets/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-external-secrets-operator
  annotations:
    argocd.argoproj.io/sync-wave: "1"
